Lox changelog
Last update: mardi, 25/06/19 

# Date: mardi, 25/06/19
-- Adding: prefix and postfix operators.

#--------------------------------------------------------------------------------

# Date: dimanche, 23/06/19
-- Adding: automatic semicolon insertion.
-- Empty statement representing by semicolon.

#--------------------------------------------------------------------------------

# Date: dimanche, 16/06/19
-- Adding: Exponent operator, bitwise shift operators
Refactoring precedence order operations.

#--------------------------------------------------------------------------------

# Date: vendredi, 14/06/19
-- Adding: Comma operator, 
change ternaryExpr function to conditional.
Refactoring modulo, and bitwise operators to keep precedence order.
Distinct directory for *.java files and *.class files.

#--------------------------------------------------------------------------------

# Date: dimanche, 02/06/19
-- Adding: bitwise operators, bitwise assignment, string comparison.
Ajout de l'exemple is_even dans le fichier is_even.txt
#--------------------------------------------------------------------------------

# Date: samedi, 01/06/19
Adding: Nested comments on multiline, line and colomn number on syntax error.
#--------------------------------------------------------------------------------

# Date: mercredi, 22/05/19
Adding: superclass, inheritance.
End of part II for lox's book.
#--------------------------------------------------------------------------------

# Date: dimanche, 05/05/2019
Adding: class, getter, setter, this, and constructor.
#--------------------------------------------------------------------------------

# Date: vendredi, 26/04/19
Adding: debug function in Resolver class
static class Variable in Resolver class.
Warnings support on inused variables
#--------------------------------------------------------------------------------

# Date: lundi, 08/04/19
Adding: lambda functionBody fully implemented,