@@ -15,7 +15,7 @@ public class GenerateAst {
     String outputDir = args[0];
     defineAst(outputDir, "Expr", Arrays.asList(
 
-      "Assign   : Token name, Expr value",
+      "Assign   : Token name, Token equals, Expr value",
 
       "Binary   : Expr left, Token operator, Expr right",
 
