@@ -1,6 +1,10 @@
 Todo sur l'interpreteur java
 Date: mercredi, 06/03/19
-Last update: mardi, 25/06/19
+Last update: vendredi, 28/06/19
+
+# Date: vendredi, 28/06/19
+* -- Refactoring compound assignment to be used only in visitassign class.
+* -- Adding support for multiply string and compound assignment *= for string.
 
 # Date: mardi, 25/06/19
 * -- Ajouter les opérateurs de prefix et postfix (-- et ++).
